# noteyard

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DERIVED_ARTIFACT_RETRIEVAL_CONTRACT.md  DISTRIBUTION.md  Dockerfile  ECOSYSTEM.md  INTEGRATIONS.md  LICENSE  README.md  SECURITY.md  SEMANTIC_RETRIEVAL_SPIKE_READINESS.md  SUPPORT.md  USE_CASES.md  glama.json  index.html  llms.txt  proof.html  pyproject.toml  robots.txt  server.json  site.webmanifest  sitemap.xml
.claude-plugin/: marketplace.json
.github/: dependabot.yml  pull_request_template.md
.stitch/: DESIGN.md
assets/: README.md  site.css
notes_recovery/: __init__.py  case_contract.py  config.py  io.py  logging.py  models.py
public-skills/: README.md
starter-bundles/: README.md
tests/: test_ai_review.py  test_apps_entrypoints.py  test_ask_case.py  test_auto_run_e2e.py  test_auto_run_full.py  test_binary_more2.py  test_binary_more3.py  test_binary_utils.py  test_bytes_more.py  test_carve.py  test_carve_branches_more.py  test_carve_more.py  test_carve_more2.py  test_carve_more3.py  test_carve_more4.py  test_case_contract.py  test_case_diff.py  test_clean_support_state.py  test_cli_entrypoints.py  test_commit_identity.py  test_dashboard_full.py  test_dashboard_helpers.py  test_dashboard_helpers_more.py  test_dashboard_missing_root.py  test_dashboard_more2.py  test_dashboard_review_workspace.py  test_dashboard_run_branches.py  test_dependency_snapshot.py  (+110 more)
(+145 files in other folders)
